Does not run from grunt anymore + interval config.
Run with coffee ./lib/orangeSoapstone.coffee
Added interfal-min and max configuration options
Separated configuration for twitter and the bot

--- a/config/config.json.example
+++ b/config/config.json.example
@@ -1,6 +1,12 @@
 {
-  "consumer_key": "",
-  "consumer_secret": "",
-  "access_token": "",
-  "access_token_secret": ""
+  "twitter": {
+    "consumer_key": "",
+    "consumer_secret": "",
+    "access_token": "",
+    "access_token_secret": ""
+  },
+  "settings": {
+    "interval-min": 21600000,
+    "interval-max": 28800000
+  }
 }
