--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "orange-soapstone",
+  "version": "0.1.0",
 
   "dependencies": {
     "twit":  "1.1.11",
-    "grunt": "*"
+    "grunt": "*",
+    "coffee-script": "*"
   },
   "devDependencies": {
 
