--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "orange-soapstone",
-  "version": "0.1.0",
+  "version": "0.1.1",
+
+  "scripts": {
+    "start": "node ./index.js"
+  },
 
   "dependencies": {
-    "twit":           "1.1.11",
-    "grunt":          "0.4.2",
-    "coffee-script":  "*"
+    "twit":           "~1.1",
+    "grunt":          "~0.4",
+    "coffee-script":  "~1.6"
   },
   "devDependencies": {
 
