Added a testo to make sure Praise the Sun! can be tweeted
Since the bot still hasn't tweeted Praise the Sun I figured I should
make sure that it even can tweet it.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 
   "scripts": {
     "start":       "node ./bin/orange-soapstone",
-    "postinstall": "grunt"
+    "postinstall": "grunt",
+    "test":        "node ./test/"
   },
 
   "dependencies": {
